--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,27 @@
-<h1>
-  {{title}}
-</h1>
-<log></log>
+<md-sidenav-layout fullscreen>
+  <md-sidenav #sidenav>
+    <md-nav-list>
+      <a md-list-item>
+        <md-icon md-list-icon>add</md-icon>
+        <span md-line>Add</span>
+        <span md-line class="secondary">Test Add</span>
+      </a>
+    </md-nav-list>
+  </md-sidenav>
+  <md-toolbar color="primary">
+    <button md-icon-button (click)="sidenav.open()">
+      <md-icon>menu</md-icon>
+    </button>
+    {{title}}
+  </md-toolbar>
+
+  <div class="card-container">
+    <md-card>
+      <log></log>
+      <md-card-actions align="end">
+        <button md-button color="primary">Clear</button>
+      </md-card-actions>
+    </md-card>
+  </div>
+
+</md-sidenav-layout>
