--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a md-list-item>
         <md-icon md-list-icon>add</md-icon>
         <span md-line>Add</span>
-        <span md-line class="secondary">Test Add</span>
+        <span md-line>Test Add</span>
       </a>
     </md-nav-list>
   </md-sidenav>
@@ -15,13 +15,6 @@
     {{title}}
   </md-toolbar>
 
-  <div class="card-container">
-    <md-card>
-      <log></log>
-      <md-card-actions align="end">
-        <button md-button color="primary">Clear</button>
-      </md-card-actions>
-    </md-card>
-  </div>
-
+  <log></log>
+  <pokebank></pokebank>
 </md-sidenav-layout>
