--- a/src/app/pokebank/pokebank.component.html
+++ b/src/app/pokebank/pokebank.component.html
@@ -1,7 +1,7 @@
 <h2>Pokebank</h2>
 <div class="pokebank">
   <md-card *ngFor="let pokemon of pokebankSorted()" class=pokemonStatus-{{pokemon.status}}>
-      <img md-card-image [alt]="pokemon.name" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokemon.pokemonId}}.png">
+      <img md-card-image [alt]="pokemon.name" src="{{pokemon.iconURL}}">
       <md-card-title>{{pokemon.name}}</md-card-title>
       <md-card-content class="secondary">
         {{pokemon.stats}}
