--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -8,8 +8,8 @@
     [title]="pokemon.name"
     [iconUrl]="pokemon.iconURL">
   <sebm-google-map-info-window>
-      {{pokemon.stats}}
+    <h2>{{pokemon.name}}</h2>
+    {{pokemon.stats}}
   </sebm-google-map-info-window>
-
 </sebm-google-map-marker>
 </sebm-google-map>
