--- a/src/app/pokebank/pokebank.component.html
+++ b/src/app/pokebank/pokebank.component.html
@@ -1,6 +1,6 @@
 <h2>Pokebank</h2>
 <div class="pokebank">
-  <md-card *ngFor="let pokemon of pokebankSorted()" class=pokemonStatus-{{pokemon.status}}>
+  <md-card *ngFor="let pokemon of pokebank" class=pokemonStatus-{{pokemon.status}}>
       <img md-card-image [alt]="pokemon.name" src="{{pokemon.iconURL}}">
       <md-card-title>{{pokemon.name}}</md-card-title>
       <md-card-content class="secondary">
