--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <md-sidenav #sidenav>
     <md-nav-list>
       <a md-list-item>
-        <md-icon md-list-icon>add</md-icon>
+        <md-icon md-list-icon>update</md-icon>
         <span md-line>Add</span>
         <span md-line>Test Add</span>
       </a>
@@ -12,7 +12,10 @@
     <button md-icon-button (click)="sidenav.open()">
       <md-icon>menu</md-icon>
     </button>
-    {{title}}
+    <span class="title">{{title}}</span>
+    <button md-fab (click)="refresh()">
+      <md-icon>refresh</md-icon>
+    </button>
   </md-toolbar>
 
   <map></map>
