--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,23 @@
-<md-sidenav-layout fullscreen>
-  <md-sidenav #sidenav>
-    <md-nav-list>
-      <a md-list-item>
-        <md-icon md-list-icon>update</md-icon>
-        <span md-line>Add</span>
-        <span md-line>Test Add</span>
-      </a>
-    </md-nav-list>
-  </md-sidenav>
-  <md-toolbar color="primary">
-    <button md-icon-button (click)="sidenav.open()">
-      <md-icon>menu</md-icon>
-    </button>
-    <span class="title">{{title}}</span>
-    <button md-fab (click)="refresh()">
-      <md-icon>refresh</md-icon>
-    </button>
-  </md-toolbar>
-
-  <map></map>
-  <log></log>
-  <pokebank></pokebank>
-</md-sidenav-layout>
+<md-tab-group>
+  <md-tab>
+    <template md-tab-label>Map</template>
+    <template md-tab-content>
+      <map></map>
+    </template>
+  </md-tab>
+  <md-tab>
+    <template md-tab-label>Pokebank</template>
+    <template md-tab-content>
+      <pokebank></pokebank>
+    </template>
+  </md-tab>
+  <md-tab>
+    <template md-tab-label>Log</template>
+    <template md-tab-content>
+      <log></log>
+    </template>
+  </md-tab>
+</md-tab-group>
+<button md-fab (click)="refresh()">
+  <md-icon>refresh</md-icon>
+</button>
